[project]
name = "python-arcade-ultimate-edition"
version = "0.2.0"
description = "Plugin-driven Ultimate Edition arcade"
requires-python = ">=3.10"

[project.optional-dependencies]
physics = ["pymunk>=6.8.1"]
dev = ["ruff>=0.6.9"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["docs", "arcade.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.black]
line-length = 120
target-version = ["py310"]
